# gst-switch

./: .gitignore  .travis-after.sh  .travis-run.sh  .travis-setup.sh  .travis.yml  COPYING  Makefile.am  README.md  autogen.sh  build-min-trusty.sh  console.py  logutils.h
plugins/: gstassess.c  gstassess.h  gstassessplugin.c  gstconvbin.c  gstconvbin.h  gstswitch.c  gstswitch.h  gstswitchplugin.c  gsttcpmixsrc.c  gsttcpmixsrc.h
python-api/: .pylintrc_gstswitch  .pylintrc_integrationtests  .pylintrc_integrationtests2  .pylintrc_unittests  Makefile  pytest.ini  setup.cfg
python-api/gstswitch/: connection.py  controller.py  exception.py  helpers.py  process_monitor.py  server.py  testsource.py
python-api/scripts/: dbusConnect.py  dbusConnect.sh  dbusConnect2.py  dbusConnection3.py  switch_infinite_test.py  test.py
python-api/tests/integrationtests/: baseclass.py  compare.py  test_audio.py  test_controller.py  test_helpers.py  test_server.py
scripts/apps/: app_indent.sh
tests/: test_fd_leaks.c  test_switch_server.c
tests/unit/: Makefile.am  gstswitchexample.c  test_gst_pipeline_string.c  test_gstcomposite.c  test_gstrecorder_filename.c  test_gstswitchopts.c
tools/: Makefile.am  gst-switch-srv.sh  gstaudiovisual.c  gstaudiovisual.h  gstcase.c  gstcase.h  gstcomposite.c  gstcomposite.h  gstrecorder.c  gstrecorder.h  gstswitchcapture.c  gstswitchcapture.h  gstswitchclient.c  gstswitchclient.h  gstswitchcontroller.c  gstswitchcontroller.h  gstswitchcontrollerintrospection.c  gstswitchopts.c  gstswitchptz.c  gstswitchptz.h  gstswitchserver.c  gstswitchserver.h  gstswitchui.c  gstswitchui.h  gstvideodisp.c  gstvideodisp.h  gstworker.c  gstworker.h
tools/gio/: gsocketinputstream.h
(+10 files in other folders)
